# geoparse

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml  setup.py
docs/: conf.py  geoparse.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  geoparse.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  geoparse.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/geoparse/: geoparse.html  gindex.html  gutils.html  karta.html  osm.html  pprocessing.html
docs/_build/html/_sources/: geoparse.rst.txt  index.rst.txt  modules.rst.txt
geoparse/: geoparse.py  gindex.py  gutils.py  karta.py  osmtools.py
tests/: test_geoparse.py  test_gindex.py
tutorials/: 00_visualization.ipynb  01_geoindex.ipynb  README.md  SnabbKarta.ipynb  gindex.ipynb  karta.ipynb  spatial_index.ipynb  trajectory.ipynb
tutorials/data/: great_briatain_raod_casualties-2023.csv  great_britain_road_casualties-2023.csv  london.geojson  luxembourg.geojson
viewer/: app.py  backend.py
