[project]
name = "geoparse"
version = "0.5.3"
description = "A collection of Python functions for performing geospatial analysis and creating visualizations. "
authors = [{name = "Abbas Kiasari", email = "kiasari@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    "Geospatial",
    "GIS",
    "Cartography",
    "Visualization",
]

requires-python = ">=3.11,<4.0"

dependencies = [
    "pyarrow>=22.0.0",
    "scipy>=1.16.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "lonboard>=0.13.0",
    "fsspec",
    "aiohttp",
    "folium>=0.14.0",
    "pygeohash>=1.2.0",
    "s2>=0.1.9",
    "h3>=4.0.0",
    "jupyterlab>=4.0.5",
]
[tool.uv]
exclude-newer = "2025-12-01T00:00:00Z"
dev-dependencies = [
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.1",
    "pre-commit>=4.0.0",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.1",
]

