[project]
name = "geoparse"
version = "0.6.2"
description = "A collection of Python functions for performing geospatial analysis and creating visualizations. "
authors = [{name = "Abbas Kiasari", email = "kiasari@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    "Geospatial",
    "GIS",
    "Cartography",
    "Visualization",
]

requires-python = ">=3.11,<4.0"

dependencies = [
    "pyarrow>=22.0.0",
    "scipy>=1.16.0",
    "geopandas>=1.1.0",
    "matplotlib>=3.10.0",
    "lonboard>=0.13.0",
    "fsspec>=2025.12.0",
#    "aiohttp>=3.13.0",
    "folium>=0.20.0",
    "pygeohash>=1.2.0",
    "s2>=0.1.9",
    "h3>=4.3.0",
    "jupyterlab>=4.5.7",
    "rasterio>=1.4.4",
    "polars>=1.38.1",
    "duckdb>=1.4.4",
    "tornado>=6.5.5",   # fix security issues
    "requests>=2.33.0",
    "pygments>=2.20.0",
    "nbconvert>=7.17.1",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.1",
    "pre-commit>=4.0.0",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.1",
]

[tool.uv]
exclude-newer = "2026-05-05T00:00:00Z"

